# rs-mahito

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.json  lefthook.yaml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/: settings.local.json
apps/cli/src/cli/: runner.rs
apps/cli/src/core/: cleaner.rs
apps/web/: mdx-components.tsx  next.config.ts  package.json  source.config.ts  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/docs/: layout.tsx
apps/web/src/app/docs/[[...slug]]/: page.tsx
apps/web/src/content/docs/: commands.mdx  installation.mdx  introduction.mdx  meta.json  usage.mdx
apps/web/src/lib/: source.ts
apps/web/src/styles/: globals.css
config/tsconfig/: next.json  package.json
src/: main.rs
src/cli/: args.rs  mod.rs  runner.rs
src/core/: error.rs  mod.rs  types.rs
