[package]
name = "rs-mahito"
version = "0.1.0"
edition = "2021"
authors = ["Victor Micco"]
description = "A CLI tool to clear metadata from files on Windows"
license = "MIT"
repository = "https://github.com/victormicco/rs-mahito"
keywords = ["metadata", "privacy", "cli", "windows"]
categories = ["command-line-utilities"]
readme = "README.md"

# This makes the binary name "rs-mahito"
[[bin]]
name = "rs-mahito"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
thiserror = "1.0"
anyhow = "1.0"
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }
walkdir = "2.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
zip = "2.2"
regex-lite = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
